Certificados arreglados para despliegue